apps/loja-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loja-api
  labels:
    app: loja-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/upstream-zone-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - loja-api.felipeduribeiro.com.br
      secretName: loja-api-tls
  rules:
    - host: loja-api.felipeduribeiro.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loja-api
                port:
                  number: 8000
